# i3bar-rusty-ricer

./: Cargo.toml  README.md
src/: main.rs
