[package]
name = "i3bar-rusty-ricer"
version = "0.1.0"
authors = ["niconicoj <joulin.nicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
spin_sleep = "1.0.0"
sysinfo = "0.17.2"
systemstat = "0.1.7"
